# lm-local-evaluation

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.py
benchmarks/: benchmark_overview.py  global_config.py  model_installationsize.py  model_latency.py  model_memoryusage.py  model_parametersize.py  model_responsequality.py  requirements.txt  run_all_benchmarks.py  system_info.py
lm-evaluation-harness/lm_eval/lm_eval/models/: __init__.py  huggingface.py
lm-evaluation-harness/lm_eval/tasks/: __init__.py
