[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "lm-local-evaluation"
version = "0.1.0"
description = "Ein lokal ausführbares Evaluations-Framework zur technischen und qualitativen Bewertung moderner Sprachmodelle."
readme = "README.md"
requires-python = "==3.11.*"
license = {text = "MIT"}
authors = [
  { name = "Niklas Schwanitz" }
]

[tool.setuptools]
packages = ["find:"]

[tool.setuptools.packages.find]
where = ["lm-evaluation-harness"]